# forecast_forge

./: .gitignore  README.md  requirements.txt  setup.cfg  setup.py
notebooks/: 1. Exploratory Analysis.ipynb
spark-setup/: Dockerfile  Makefile  docker-compose.yarn.yml  docker-compose.yml  entrypoint-yarn.sh  entrypoint.sh
src/: data.py
src/forecast_forge/: abstract_model.py  baseline_model.py  config.py  data.py  data_loader.py  data_processing.py  forecast_config.yaml  forecaster.py  model_registry.py  models_config.yaml  run_forecast.py  univariate_weekly.py
