[metadata]
name = forecast_forge
version = 0.0.1
description="Financial data analysis and API integration"
long_description = file: README.md
long_description_content_type = text/markdown
url='https://github.com/selewaut/forecast_forge'
author="Santiago Elewaut"
author_email='santielewaut@gmail.com'
classifiers =
        'Development Status :: 2 - Pre-Alpha'
        'Intended Audience :: Developers'
        'Natural Language :: English'
        'Programming Language :: Python :: 3.11'

[options]
py_modules = forecast_forge
python_requires = >=3.11
package_dir =
 = src
[bumpversion]



current_version = 0.0.1
commit = True
tag = True

[bumpversion:file:setup.py]
search = version='{current_version}'
replace = version='{new_version}'

[bumpversion:file:forecast_forge/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'